--- a/create_dataset.ipynb
+++ b/create_dataset.ipynb
@@ -93,7 +93,7 @@
     "## Use\n",
     "    My normal steps are a bit wonky but I'm refining them as things go. \n",
     "    1: Download images from GIS, Kaggle, Wikiart, DEvient art... \n",
-    "    2: sort by landscape or portrait (sort_images_by_alignment.py)\n",
+    "    2: Sort by landscape or portrait (sort_images_by_alignment.py)\n",
     "    3: Gigapixel is used to resize the images to a standard height/width depending on the smallest dimension (height for landscape...)\n",
     "    4: Save images back to originating folder.\n",
     "    5: Now you can create dataset with this. "
