--- a/create_dataset.ipynb
+++ b/create_dataset.ipynb
@@ -1064,7 +1064,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "82cce2d5-0836-4823-b49c-8c27badc9c5f",
-   "#Initialize variables",
+   "#Initialize variables\n",
    "metadata": {},
    "outputs": [],
    "source": []
